--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -104,7 +106,6 @@ celerybeat.pid
 .venv
 env/
 venv/
-formenv/
 ENV/
 env.bak/
 venv.bak/
